{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "0acb02a0-f8f4-4b39-bf6f-a9f9eb11118d",
            "actions": [
                {
                    "name": "ApplyMovement",
                    "type": "Value",
                    "id": "4614d3e5-e8b2-4db8-b97b-f7d470ede9c5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SetRunSpeen",
                    "type": "Button",
                    "id": "b4498d5d-555e-4ffe-adcc-a309a2360911",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ApplyJump",
                    "type": "Button",
                    "id": "a14c67d2-2ba1-42f8-a882-9c27cf421de7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FastFall",
                    "type": "Button",
                    "id": "aaf8eb42-7dd4-4058-ac1c-d127a8e44a15",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ApplyClimb",
                    "type": "Value",
                    "id": "766223b1-b351-4f43-8c9c-79575ceee8b8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "eef9165a-e727-4fc0-a169-295d12f4fe8c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ApplyMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "72cb458d-10bc-4a3f-930c-2e0e14611659",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ApplyMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0aa4eb60-4efb-4f4d-a0e0-adb93413d56e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ApplyMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9ca13309-1a66-47e4-b25b-88d5d844a5e8",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetRunSpeen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c4fee08-86e4-46ae-aff9-cd9d051e47a6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ApplyJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "134f20ef-840e-4104-ac91-4fa52f949b89",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FastFall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "6f00ce00-bd60-40e1-87ca-aa0aac15a777",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ApplyClimb",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e3b01e45-e30d-4a7a-8f4f-4822ba314e8b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ApplyClimb",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "316dc587-0008-4372-854b-657cda8143a1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ApplyClimb",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7c005c87-147d-4757-93db-5a97d55183dd",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ApplyClimb",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0c96f45a-45db-4452-b43a-fc8da9a6d6ae",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ApplyClimb",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}